--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,27 @@
-name: my_app
+name: my_first_project
 description: A new Flutter project
 
+publish_to: "none"
+
+version: 1.0.0+1
+
 environment:
-  sdk: '^3.9.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  cupertino_icons: ^1.0.2
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  flutter_lints: ^3.0.0
+
+flutter:
+  uses-material-design: true
+
+  assets:
+    - assets/
